@@ -243,5 +243,14 @@
        hole))
   (test (render-language L) "holes.png"))
 
+(let ()
+  ;; the 'has no lambdas' relation (useful because it has a case with no premises)
+  (define-relation lang
+    [(r e_1 e_2) (r e_1) (r e_2)]
+    [(r x)])
+  (test (render-relation r) "relation.png"))
+
+    
+
 (printf "bitmap-test.ss: ")
 (done)
